--- a/cpp8.tex
+++ b/cpp8.tex
@@ -30,7 +30,7 @@ auto multiply(const T& a, const V& b) -> decltype(a*b) {
 \end{minted}
 
 \subsection{move семантика}
-Используется, если класс(структура имеет указатели). В таком случае, если мы хотим ``переместить'' класс, то можно лишь переместить их, а не копировать что-либо.
+Используется, если класс(структура) имеет указатели. В таком случае, если мы хотим ``переместить'' объект, то можно лишь переместить их, а не копировать что-либо.
 В $C++$ все выражения делятся на lvalue и rvalue. Грубо говоря, lvalue "--- то, что можно писать слева от ``$=$'', а rvalue "--- все остальное.
 \begin{minted}{c++}
 template<class T>
